@@ -20,6 +20,8 @@ BUGFIXES:
   ZOOKEEPER-2074: Incorrect exit codes for "./zkCli.sh cmd arg"
   (Abraham Fine via phunt)
 
+  Fix command handling in the C client shell (phunt via fpj)
+  
 IMPROVEMENTS:
 
 
